--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "node": "16.18.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
     "build": "cd client && npm install && npm run build"
@@ -21,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongoose": "^6.6.5",
     "nodemailer": "^6.8.0"
   }
